[tool.poetry]
name = "recapv3"
version = "0.1.0"
description = ""
authors = ["x404xx <ghost.py@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
user-agent = "^0.1.10"
rich = "^13.7.1"
httpx = {extras = ["socks"], version = "^0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
